[gd_scene load_steps=3 format=3 uid="uid://y0gx7ugbw0r4"]

[ext_resource type="Theme" path="res://scenes/ui/game.theme" id="1_t821i"]
[ext_resource type="Script" path="res://scenes/ui/dialog_notify/dialog_notify.gd" id="2_4fhuw"]

[node name="DialogNotify" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_t821i")
script = ExtResource("2_4fhuw")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Titlebar" type="PanelContainer" parent="Layout"]
layout_mode = 2
theme_type_variation = &"DialogPanelTitlebar"

[node name="LBL_Titlebar" type="Label" parent="Layout/Titlebar"]
unique_name_in_owner = true
layout_mode = 2
text = "Some Spiffy Title"
horizontal_alignment = 1

[node name="Content" type="PanelContainer" parent="Layout"]
layout_mode = 2
theme_type_variation = &"DialogPanelBody"

[node name="LBL_Content" type="Label" parent="Layout/Content"]
unique_name_in_owner = true
layout_mode = 2
text = "Some really nice content should go here!"
horizontal_alignment = 1

[node name="Options" type="PanelContainer" parent="Layout"]
layout_mode = 2
theme_type_variation = &"DialogPanelFooter"

[node name="HBoxContainer" type="HBoxContainer" parent="Layout/Options"]
layout_mode = 2

[node name="Spacer1" type="Control" parent="Layout/Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BTN_OK" type="Button" parent="Layout/Options/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "OK"

[node name="Spacer2" type="Control" parent="Layout/Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="Layout/Options/HBoxContainer/BTN_OK" to="." method="_on_btn_ok_pressed"]
